--- a/WebTruss.EntityFrameworkCore.DynamoDb/WebTruss.EntityFrameworkCore.DynamoDb.csproj
+++ b/WebTruss.EntityFrameworkCore.DynamoDb/WebTruss.EntityFrameworkCore.DynamoDb.csproj
@@ -14,6 +14,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.103.11" />
+	  <PackageReference Include="CompareNETObjects" Version="4.79.0" />
 	</ItemGroup>
 
 </Project>
