--- a/WebTruss.EntityFrameworkCore.DynamoDb/WebTruss.EntityFrameworkCore.DynamoDb.csproj
+++ b/WebTruss.EntityFrameworkCore.DynamoDb/WebTruss.EntityFrameworkCore.DynamoDb.csproj
@@ -18,4 +18,8 @@
 	  <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\WebTruss.EntityFrameworkCore.DynamoDb.Attributes\WebTruss.EntityFrameworkCore.DynamoDb.Attributes.csproj" />
+	</ItemGroup>
+
 </Project>
