--- a/ExampleWebApi/ExampleWebApi.csproj
+++ b/ExampleWebApi/ExampleWebApi.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\WebTruss.EntityFrameworkCore.DynamoDb\WebTruss.EntityFrameworkCore.DynamoDb.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
